[project]
name = "comisteichon-api"
version = "0.1.0"
description = "API para hacer comer comia a los wnes"
readme = "README.md"
authors = [
    { name = "ElWazy", email = "santiago.fierro4@outlook.cl" }
]
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.115.12",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
